# apto

./: CMakeLists.txt
include/apto/core/: Atomic.h  FileSystem.h
include/apto/platform/: Platform.h
include/apto/rng/: AvidaRNG.h
src/: CMakeLists.txt
src/core/: FileSystem.cc
src/rng/: AvidaRNG.cc
unittests/: CMakeLists.txt
